# vulkan-compute-perf

./: CMakeLists.txt  README.md
assets/: isa_dump.txt
results/: particles_1048576_wg_1024.csv  particles_1048576_wg_128.csv  particles_1048576_wg_256.csv  particles_1048576_wg_32.csv  particles_1048576_wg_512.csv  particles_1048576_wg_64.csv  particles_131072_wg_1024.csv  particles_131072_wg_128.csv  particles_131072_wg_256.csv  particles_131072_wg_32.csv  particles_131072_wg_512.csv  particles_131072_wg_64.csv  particles_16384_wg_1024.csv  particles_16384_wg_128.csv  particles_16384_wg_256.csv  particles_16384_wg_32.csv  particles_16384_wg_512.csv  particles_16384_wg_64.csv  particles_2097152_wg_1024.csv  particles_2097152_wg_128.csv  particles_2097152_wg_256.csv  particles_2097152_wg_32.csv  particles_2097152_wg_512.csv  particles_2097152_wg_64.csv  particles_262144_wg_1024.csv  particles_262144_wg_128.csv  particles_262144_wg_256.csv  particles_262144_wg_32.csv  particles_262144_wg_512.csv  particles_262144_wg_64.csv  particles_32768_wg_1024.csv  particles_32768_wg_128.csv  particles_32768_wg_256.csv  particles_32768_wg_32.csv  particles_32768_wg_512.csv  particles_32768_wg_64.csv  particles_4194304_wg_1024.csv  particles_4194304_wg_128.csv  particles_4194304_wg_256.csv  particles_4194304_wg_32.csv  (+20 more)
scripts/: measure.py  plot.py
shaders/: shader_compute.slang
src/: compute_shader.cpp
